kubernetes/apps/storage/docker-registry/templates/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  labels:
    app: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: docker.io/klausmeyer/docker-registry-browser:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
spec:
  selector:
    app: registry-ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
